# spz

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: spz.yml
pyspz/: __init__.py
src/cc/: load-spz.cc  load-spz.h  main.cc  splat-types.cc  splat-types.h  wasm.cc
src/cc/python/: bindings.cc
src/html/: index.html
